--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -23,18 +23,21 @@
             android:orientation="vertical"
             >
             <EditText
+                android:id="@+id/name"
                 android:inputType="text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Name"
                 />
             <EditText
+                android:id="@+id/email"
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="E-mail address"
                 />
             <EditText
+                android:id="@+id/password"
                 android:inputType="textPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -46,7 +49,37 @@
     </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></LinearLayout>
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/login"
+            android:textColor="@color/white"
+            android:background="@color/teal_700"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="Login"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginEnd="5dp"/>
+        <TextView
+            android:id="@+id/signup"
+            android:textColor="@color/white"
+            android:background="@color/teal_700"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:text="SignUp"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:layout_marginEnd="5dp"/>
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
